docs: clarify primitive patterns notes