@@ -10,8 +10,18 @@ class PrimitivePatternsThirdPreviewNotesTest {
 
 	@Test
 	void notesKeepPrimitivePatternsClearlyLabeledAsPreview() {
+		assertThat(notes.purpose())
+				.as("Primitive patterns should be framed as uniform pattern matching")
+				.contains("uniform")
+				.contains("primitive types")
+				.contains("pattern contexts");
+		assertThat(notes.safetyGoal())
+				.as("Primitive patterns should explain safe conversion before binding")
+				.contains("conversion is safe")
+				.contains("binding");
 		assertThat(notes.status())
 				.as("Primitive patterns should not be presented as final in Java 25")
-				.contains("third preview");
+				.contains("third preview")
+				.contains("--enable-preview");
 	}
 }
